# jpmdb

./: .gitignore  Dockerfile-frontend  README.md  docker-compose.yml  gunicorn_config.py  hello.py  pyproject.toml
jpmdb/: app.py  common.py  create_db.py  create_silver_imdb.py  create_silver_jpmdb.py  gold_jpmdb.py  imdb.py  parse_jpmdb.py  review_combined_jpmdb.py  review_silver_stg_jpmdb_combined.py  scrape_imdb.py  scrape_imdb_photos.py  silver_jpmdb_combined.py  styling.py
jpmdb/assets/css/: style.css
jpmdb/pages/: summary.py
jpmdb/pipeline/: optimize_tables.py  scrape_imdb.py
jpmdb/pipeline/gold/: jpmdb.py
jpmdb/pipeline/silver/: imdb.py  jpmdb_with_imdb.py  review_matches.py
tests/: test_parse_jpmdb.py
