[project]
name = "jpmdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deltalake>=0.24.0",
    "duckdb>=1.1.3",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]
