[project]
name = "jpmdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "deltalake>=0.24.0",
    "duckdb>=1.1.3",
    "jellyfish>=1.1.3",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pydantic>=2.10.6",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "rapidfuzz>=3.11.0",
    "requests>=2.32.3",
    "ruff>=0.9.3",
    "typer>=0.15.1",
    "unidecode>=1.3.8",
]

[tool.ruff.lint]
extend-select = ["I"]
