[project]
name = "jpmdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "dash[compress]>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "dash-breakpoints>=0.1.0",
    "deltalake>=0.24.0",
    "duckdb>=1.1.3",
    "jellyfish>=1.1.3",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pydantic>=2.10.6",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "rapidfuzz>=3.11.0",
    "requests>=2.32.3",
    "ruff>=0.9.3",
    "typer>=0.15.1",
    "unidecode>=1.3.8",
    "statsmodels>=0.14.4",
    "pypalettes>=0.1.5",
    "gunicorn>=23.0.0",
]

[tool.ruff.lint]
extend-select = ["I"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jpmdb"]
